[package]
name = "shlex-os"
version = "1.1.0"
authors = [
    "comex <comexk@gmail.com>",
    "Fenhl <fenhl@fenhl.net>",
    "Mohammad AlSaleh <MoSal@GitHub>" # adaptation for OsStr/OsString
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/comex/rust-shlex"
description = "Split a string into shell words, like Python's shlex (adapted for OsStr/OsString types)."
categories = [
    "command-line-interface",
    "parser-implementations"
]
edition = "2018"

[dependencies]
os_str_bytes = "^6.0.0"
